# IndexSlot.gd
extends PanelContainer

# --- Constantes ---
const RENDER_LAYER_PREVIEW = 3 # Couche de rendu pour les previews de l'UI

# --- RÃ©fÃ©rences aux NÅ“uds ---
@onready var pet_name_label: Label = %PetNameLabel
@onready var preview_viewport_container: SubViewportContainer = %PetPreview


# --- MÃ©thodes Publiques ---

# ðŸ”¹ Configure l'apparence du slot en fonction d'un pet et de son statut "dÃ©couvert".
func setup(pet_name: String, is_discovered: bool):
	# Attend que les nÅ“uds enfants (SubViewport, etc.) soient prÃªts.
	await get_tree().process_frame

	# RÃ©cupÃ¨re le conteneur pour le modÃ¨le 3D.
	var preview_scene = preview_viewport_container.get_child(0).get_child(0)
	var object_holder: Node3D = preview_scene.get_node_or_null("ObjectHolder")
	
	if not is_instance_valid(object_holder):
		printerr("ERREUR dans IndexSlot: 'ObjectHolder' non trouvÃ© dans la scÃ¨ne de preview.")
		return
	
	# Nettoie l'ancien modÃ¨le.
	for child in object_holder.get_children():
		child.queue_free()

	# Instancie le modÃ¨le du pet.
	var pet_def = DataManager.PET_DEFINITIONS[pet_name]
	var model = pet_def.model.instantiate()
	object_holder.add_child(model)
	
	# Applique les styles "dÃ©couvert" ou "non dÃ©couvert".
	if is_discovered:
		pet_name_label.text = pet_name
		# Affiche le modÃ¨le normalement.
		_set_model_render_layer(model, RENDER_LAYER_PREVIEW)
	else:
		pet_name_label.text = "???"
		# Applique un effet de silhouette.
		_apply_silhouette_effect(model)
		_set_model_render_layer(model, RENDER_LAYER_PREVIEW)


# --- MÃ©thodes Internes ---

# ðŸ”¹ Applique un matÃ©riau noir au modÃ¨le pour crÃ©er un effet de silhouette.
func _apply_silhouette_effect(model_node: Node3D):
	var visual_node = _find_mesh_recursively(model_node)
	if visual_node:
		var silhouette_material = StandardMaterial3D.new()
		silhouette_material.albedo_color = Color.BLACK
		visual_node.material_override = silhouette_material

# ðŸ”¹ Applique une couche de rendu Ã  tous les meshes d'un nÅ“ud et de ses enfants.
func _set_model_render_layer(node: Node, layer_number: int):
	# Godot utilise un bitmask pour les layers, donc 1 -> 1, 2 -> 2, 3 -> 4, 4 -> 8, etc.
	var layer_mask = 1 << (layer_number - 1)
	
	if node is MeshInstance3D:
		node.layers = layer_mask
	for child in node.get_children():
		_set_model_render_layer(child, layer_number)

# ðŸ”¹ Trouve rÃ©cursivement le premier nÅ“ud MeshInstance3D dans une hiÃ©rarchie.
func _find_mesh_recursively(node: Node) -> MeshInstance3D:
	if node is MeshInstance3D:
		return node
	for child in node.get_children():
		var mesh = _find_mesh_recursively(child)
		if mesh:
			return mesh
	return null
